tooling/nargo_cli/tests/snapshots/compile_failure/brillig_slice_to_acir/execute__tests__brillig_slice_to_acir_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused variable i
   ┌─ src/main.nr:10:9
   │
10 │     for i in 0..y {
   │         - unused variable
   │

warning: unused variable x
  ┌─ src/main.nr:8:24
  │
8 │ unconstrained fn clear(x: [u32; DEPTH], y: u32) -> [u32] {
  │                        - unused variable
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:3:12
  │
3 │ fn main(x: [u32; DEPTH], y: u32) {
  │            ------------ expected `u32`, found `Field`
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:8:27
  │
8 │ unconstrained fn clear(x: [u32; DEPTH], y: u32) -> [u32] {
  │                           ------------ expected `u32`, found `Field`
  │

error: Call to unconstrained function is unsafe and must be in an unconstrained function or unsafe block
  ┌─ src/main.nr:5:13
  │
5 │     new_x = clear(x, y);
  │             -----------
  │

error: Slices cannot be returned from an unconstrained runtime to a constrained runtime
  ┌─ src/main.nr:5:13
  │
5 │     new_x = clear(x, y);
  │             -----------
  │

error: Cannot assign an expression of type [u32] to a value of type [_; 0]
  ┌─ src/main.nr:5:13
  │
5 │     new_x = clear(x, y);
  │             -----------
  │

error: No method named 'push_back' found for type '[u32; 0]'
   ┌─ src/main.nr:11:13
   │
11 │         a = a.push_back(x[i]);
   │             -----------------
   │

Aborting due to 6 previous errors
